--- a/src/input.css
+++ b/src/input.css
@@ -2,3 +2,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@media (max-width: 450px) {
+    .hide-on-small {
+      display: none;
+    }
+  }
